# PythonSelenium

./: .flake8  .gitignore  Dockerfile  README.md  azure-pipelines.yml  pyproject.toml  requirements.txt  setup.cfg  virtualenv_install.sh
.github/: Workflows.md
.github/workflows/: python-nightly-mac.yml  python-nightly-ubuntu.yml  python-package.yml
examples/: ReadMe.md  basic_test.py  custom_settings.py  edge_test.py  github_test.py  gui_test_runner.py  hack_the_planet.py  handle_alert_test.py  iframe_tests.py  locale_code_test.py  my_first_test.py  nth_child_test.py  old_wordle_script.py  parameterized_test.py  performance_test.py  proxy_test.py  ps_fixture_tests.py  pytest.ini  rate_limiting_test.py  raw_ahrefs.py  raw_bing_captcha.py  raw_call.py  raw_cookies.py  raw_driver_context.py  raw_driver_manager.py  raw_file_call.py  raw_games.py  raw_gui_click.py  raw_main_call.py  raw_mobile.py  raw_multi_drivers.py  raw_nopecha.py  raw_order_tickets.py  raw_parameter_script.py  raw_performance_logs.py  raw_pixelscan.py  raw_pyautogui.py  raw_recaptcha.py  raw_robot.py  raw_uc_mode.py  (+59 more)
examples/behave_bdd/: ReadMe.md
examples/behave_bdd/features/: environment.py  experimental.feature  swag_labs.feature
examples/behave_bdd/features/steps/: experimental_steps.py  imported.py  swag_labs.py
examples/boilerplates/: ReadMe.md  base_test_case.py  boilerplate_test.py  classic_obj_test.py  ps_fixture_test.py
examples/boilerplates/samples/: google_test.py  ps_swag_test.py  swag_labs_test.py  test_page_objects.py
examples/boilerplates/samples/file_parsing/: parse_files.py
examples/capabilities/: ReadMe.md
examples/chart_maker/: ReadMe.md  chart_presentation.py  my_chart.py  pie_charts.py  test_area_chart.py  test_display_chart.py  test_line_chart.py  test_multi_series.py  test_save_chart.py
examples/desktop_apps/: ReadMe.md  recorder.py
examples/dialog_boxes/: ReadMe.md  dialog_box_tour.py
examples/example_logs/: ReadMe.md  basic_test_info.txt
examples/master_qa/: ReadMe.md  basic_masterqa_test_0.py  masterqa_test_1.py
examples/migration/protractor/: ReadMe.md  example_test.py  input_test.py  mat_paginator_test.py
examples/migration/raw_selenium/: ReadMe.md  flaky_messy_raw.py  long_messy_raw.py  messy_raw.py  refined_raw.py  simple_pysel.py
examples/offline_examples/: canvas_page.html  demo_page.html  load_html_test.py  test_demo_page.py  test_extended_driver.py  test_handle_alerts.py  test_request_fixture.py  test_user_agent.py
examples/tour_examples/: ReadMe.md  bootstrap_google_tour.py  bootstrap_xkcd_tour.py  driverjs_maps_tour.py  google_tour.py  hopscotch_google_tour.py  introjs_google_tour.py  maps_introjs_tour.py  shepherd_google_tour.py  xkcd_tour.py
examples/unit_tests/: ReadMe.md  verify_framework.py
examples/visual_testing/: ReadMe.md  layout_test.py  python_home_test.py  test_layout_fail.py  xkcd_visual_test.py
help_docs/: ReadMe.md  behave_gui.md  case_plans.md  commander.md  customizing_test_runs.md  demo_mode.md  desired_capabilities.md  features_list.md  handling_iframes.md  hidden_files_info.md  how_it_works.md  html_inspector.md  install.md  install_python_pip_git.md  js_package_manager.md  locale_codes.md  method_summary.md  mobile_testing.md  mysql_installation.md  recorder_mode.md  shadow_dom.md  syntax_formats.md  uc_mode.md  useful_grep_commands.md  using_safari_driver.md  verify_webdriver.md  virtualenv_instructions.md  webdriver_installation.md
integrations/azure/azure_pipelines/: ReadMe.md
integrations/azure/jenkins/: ReadMe.md
integrations/brython/: ReadMe.md
integrations/docker/: ReadMe.md  docker-entrypoint.sh  run_docker_test_in_chrome.sh
integrations/github/: ReadMe.md
integrations/github/workflows/: ReadMe.md  extras.md  python-nightly-mac.yml  python-nightly-ubuntu.yml  python-nightly-windows.yml
integrations/google_cloud/: ReadMe.md
integrations/linux/: Linuxfile.sh  ReadMe.md
integrations/node_js/: ReadMe.md  my_first_test.py  test_demo_site.py
integrations/selenium_grid/: ReadMe.md
integrations/selenium_ide/: ReadMe.md
pysel/: ReadMe.txt  __init__.py  __main__.py  steps.py
pythonselenium/: ReadMe.md  __init__.py  __main__.py  __version__.py
pythonselenium/behave/: behave_helper.py  behave_ps.py  steps.py
pythonselenium/common/: ReadMe.md  decorators.py  encryption.py  exceptions.py  obfuscate.py  unobfuscate.py
pythonselenium/config/: ad_block_list.py  settings.py
pythonselenium/console_scripts/: ReadMe.md  logo_helper.py  ps_behave_gui.py  ps_caseplans.py  ps_commander.py  ps_install.py  ps_mkchart.py  ps_mkdir.py  ps_mkfile.py  ps_mkrec.py  ps_objectify.py  ps_print.py  ps_recorder.py  run.py
pythonselenium/core/: browser_launcher.py  create_db_tables.sql  download_helper.py  jqc_helper.py  log_helper.py  mysql.py  proxy_helper.py  ps_driver.py  recorder_helper.py  report_helper.py  s3_manager.py  session_helper.py  settings_parser.py  style_sheet.py  testcase_manager.py  tour_helper.py  visual_helper.py
pythonselenium/extensions/: ReadMe.md
pythonselenium/fixtures/: base_case.py  constants.py  errors.py  js_utils.py  page_actions.py  page_utils.py  shared_utils.py  unittest_helper.py  xpath_to_css.py
pythonselenium/js_code/: recorder_js.py
pythonselenium/masterqa/: ReadMe.md  master_qa.py
pythonselenium/plugins/: base_plugin.py  basic_test_info.py  db_reporting_plugin.py  driver_manager.py  page_source.py  ps_manager.py  pytest_plugin.py  s3_logging_plugin.py  screen_shots.py  selenium_plugin.py
pythonselenium/resources/: ReadMe.md
pythonselenium/undetected/: __init__.py  cdp.py  patcher.py  webelement.py
pythonselenium/utilities/selenium_grid/: ReadMe.md  grid_hub.py  grid_node.py
pythonselenium/utilities/selenium_ide/: ReadMe.md  convert_ide.py
