[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.44.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pythonselenium"
version = "1.0.0"
description = "Web automation framework for testing."
requires-python = ">=3.7"
license = {text = "MIT License"}
readme = "README.md"
authors = [
    {name = "noname", email = "noemail@example.com"}
]
maintainers = [
    {name = "noname", email = "noemail@example.com"}
]
keywords = []
classifiers = []
dependencies = [
    'attrs>=24.2.0',
    'beautifulsoup4==4.12.3',
    'behave==1.2.6',
    'certifi>=2024.7.4',
    'chardet==5.2.0',
    'charset-normalizer==3.3.2',
    'colorama==0.4.6',
    'cssselect==1.2.0',
    'exceptiongroup>=1.2.2',
    'execnet==2.0.2; python_version<"3.8"',
    'execnet==2.1.1; python_version>="3.8"',
    'fasteners==0.19',
    'filelock>=3.12.2; python_version<"3.8"',
    'filelock>=3.15.4; python_version>="3.8"',
    'jsonschema>=4.0.0',
    'h11==0.14.0',
    'idna==3.7',
    'iniconfig==2.0.0',
    'markdown-it-py==2.2.0; python_version<"3.8"',
    'markdown-it-py==3.0.0; python_version>="3.8"',
    'mdurl==0.1.2',
    'outcome==1.3.0.post0',
    'packaging>=24.0; python_version<"3.8"',
    'packaging>=24.1; python_version>="3.8"',
    'parameterized==0.9.0',
    'parse-type>=0.6.2',
    'parse>=1.20.2',
    'pdbp==1.5.4',
    'pip>=24.0; python_version<"3.8"',
    'pip>=24.1.2; python_version>="3.8"',
    'platformdirs>=4.0.0; python_version<"3.8"',
    'platformdirs>=4.2.2; python_version>="3.8"',
    'pluggy==1.2.0; python_version<"3.8"',
    'pluggy==1.5.0; python_version>="3.8"',
    'py==1.11.0',
    'pygments==2.17.2; python_version<"3.8"',
    'pygments==2.18.0; python_version>="3.8"',
    'pynose==1.5.2',
    'pyotp==2.9.0',
    'pyreadline3==3.4.1; platform_system=="Windows"',
    'pytest-html==2.0.1',
    'pytest-metadata==3.0.0; python_version<"3.8"',
    'pytest-metadata==3.1.1; python_version>="3.8"',
    'pytest-ordering==0.6',
    'pytest-rerunfailures==13.0; python_version<"3.8"',
    'pytest-rerunfailures==14.0; python_version>="3.8"',
    'pytest-xdist==3.5.0; python_version<"3.8"',
    'pytest-xdist==3.6.1; python_version>="3.8"',
    'pytest==7.4.4; python_version<"3.8"',
    'pytest==8.3.2; python_version>="3.8"',
    'python-xlib==0.33; platform_system=="Linux"',
    'pyyaml==6.0.1; python_version<"3.8"',
    'pyyaml>=6.0.2; python_version>="3.8"',
    'requests==2.31.0',
    'rich==13.7.1',
    'sbvirtualdisplay==1.3.0',
    'selenium==4.11.2; python_version<"3.8"',
    'selenium==4.23.1; python_version>="3.8"',
    'setuptools>=68.0.0; python_version<"3.8"',
    'setuptools>=70.2.0; python_version>="3.10"',
    'setuptools~=70.2; python_version>="3.8" and python_version<"3.10"',
    'six==1.16.0',
    'sniffio==1.3.1',
    'sortedcontainers==2.4.0',
    'soupsieve==2.4.1; python_version<"3.8"',
    'soupsieve==2.5; python_version>="3.8"',
    'tabcompleter==1.3.3',
    'trio-websocket==0.11.1',
    'trio==0.22.2; python_version<"3.8"',
    'trio==0.26.2; python_version>="3.8"',
    'typing-extensions>=4.12.2; python_version>="3.8"',
    'urllib3>=1.26.19, <2.3.0; python_version>="3.10"',
    'urllib3>=1.26.19, <2; python_version<"3.10"',
    'websocket-client==1.8.0; python_version>="3.8"',
    'wheel>=0.42.0; python_version<"3.8"',
    'wheel>=0.44.0; python_version>="3.8"',
    'wsproto==1.2.0'
]

[project.optional-dependencies]
allure = [
    "allure-pytest>=2.13.5",
    "allure-python-commons>=2.13.5",
    "allure-behave>=2.13.5",
]
coverage = [
    'coverage==7.2.7; python_version<"3.8"',
    'coverage>=7.6.1; python_version>="3.8"',
    'pytest-cov==4.1.0; python_version<"3.8"',
    'pytest-cov>=5.0.0; python_version>="3.8"',
]
flake8 = [
    'black>=24.0.0',
    'flake8==7.1.1; python_version>="3.9"',
    'flake8-annotations==3.1.1; python_version>="3.9"',
    'flake8-annotations-coverage==0.0.6',
    'flake8-bugbear==23.12.2; python_version>="3.9"',
    'flake8-builtins==2.0.1; python_version>="3.9"',
    'flake8-cognitive-complexity==0.1.0',
    'flake8-commas==2.1.0',
    'flake8-comprehensions==3.13.0; python_version>="3.9"',
    'flake8-eradicate==1.5.0',
    'flake8-expression-complexity==0.0.11',
    'flake8-functions==0.0.7',
    'flake8-global-variables @ git+https://github.com/i02sopop/flake8-global-variables.git',
    'flake8-grug @ git+https://github.com/c0ntribut0r/flake8-grug.git',
    'flake8-json==21.7.0',
    'flake8-pie==0.16.0',
    'flake8-print==5.0.0',
    'flake8-scream==0.1.0',
    'flake8-simplify==0.20.0; python_version>="3.9"',
    'flake8-use-pathlib==0.3.0',
    'isort>=5.10.1',
    "mccabe==0.7.0",
    'pep8-naming==0.14.1',
    'pycodestyle==2.12.1; python_version>="3.9"',
    'pyflakes==3.2.0; python_version>="3.9"',
]
ipdb = [
    "ipdb==0.13.13",
    "ipython==7.34.0",
]
pdfminer = [
    'pdfminer.six==20221105; python_version<"3.8"',
    'pdfminer.six==20240706; python_version>="3.8"',
    'cryptography==39.0.2; python_version<"3.9"',
    'cryptography==43.0.0; python_version>="3.9"',
    'cffi==1.15.1; python_version<"3.8"',
    'cffi==1.17.0; python_version>="3.8"',
    "pycparser==2.22",
]
pillow = [
    'Pillow==9.5.0; python_version<"3.8"',
    'Pillow>=10.4.0; python_version>="3.8"',
]
pip-system-certs = [
    'pip-system-certs==4.0; platform_system=="Windows"',
]
proxy = [
    "proxy.py==2.4.3",
]
psutil = [
    "psutil==6.0.0",
]
pyautogui = [
    "PyAutoGUI==0.9.54",
]
selenium-stealth = [
    "selenium-stealth==1.0.6",
]
selenium-wire = [
    "selenium-wire==5.1.0",
    "pyOpenSSL==24.2.1",
    "Brotli==1.1.0",
    "blinker==1.7.0",
    "h2==4.1.0",
    "hpack==4.0.0",
    "hyperframe==6.0.1",
    "kaitaistruct==0.10",
    'pyasn1==0.5.1; python_version<"3.8"',
    'pyasn1==0.6.0; python_version>="3.8"',
    "zstandard==0.23.0",
]

[project.scripts]
pythonselenium = "pythonselenium.console_scripts.run:main"
pysel = "pythonselenium.console_scripts.run:main"

[project.entry-points."nose.plugins"]
base_plugin = "pythonselenium.plugins.base_plugin:Base"
selenium = "pythonselenium.plugins.selenium_plugin:SeleniumBrowser"
page_source = "pythonselenium.plugins.page_source:PageSource"
screen_shots = "pythonselenium.plugins.screen_shots:ScreenShots"
test_info = "pythonselenium.plugins.basic_test_info:BasicTestInfo"
db_reporting = "pythonselenium.plugins.db_reporting_plugin:DBReporting"
s3_logging = "pythonselenium.plugins.s3_logging_plugin:S3Logging"

[project.entry-points."pytest11"]
pythonselenium = "pythonselenium.plugins.pytest_plugin"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]
